# fql

./: .dockerignore  .env  .gitignore  .gitmodules  .golangci.yml  AGENTS.md  CLAUDE.md  LICENSE  bake.hcl  build.sh  check.sh  compose.yaml  demo_watch.sh  docker-bake.hcl  docker-bake.json  docker-bake.yaml  docker-compose.yaml  docker.sh  examples.txt  fdbq.go  fdbr.bnf  go.mod  go.sum  golangci.yaml  main.go  out.txt  parser.go  parser_test.go  readme.md  syntax.bnf  syntax.ebnf  syntax.md  test_watch.sh  todo.md  verify.sh  vision.md
app/: app.go  headless.go
docker/: Dockerfile  Dockerfile.builder  Dockerfile.fenv  shim.sh
docs/: demo.html  demo.md  index.html  index.md  index.tmpl  scratch.md
elixir/: SUMMARY.md
engine/: context.go  coordinator.go  engine.go  engine_test.go  example_test.go
examples/: watch_example.md
generate/: generate.go
keyval/: compare.go  compare_test.go  equal.go  equal_test.go  iterator.go  iterator_test.go  keyval.go  keyval_directory.g.go  keyval_query.g.go  keyval_test.go  keyval_tuple.g.go  keyval_value.g.go  kind.go  kind_test.go  parser.go  parser_test.go  tuple.go  tuple_test.go  utilities.go  utilities_test.go  values.go  values_test.go
kv/: kv.go
model/: model.go  (+1 more)
rust/: .gitignore  Cargo.toml  README.md  TODO.md
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/engine/: Cargo.toml
rust/engine/src/: facade.rs  lib.rs  stream.rs
rust/keyval/: Cargo.toml
rust/keyval/src/: class.rs  convert.rs  lib.rs  tuple.rs  values.rs
rust/parser/: Cargo.toml
rust/parser/src/: format.rs  lib.rs  scanner.rs
(+227 files in other folders)
